spring security com uso de userdetails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,4 @@ cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
 cloud.aws.region.static=${AWS_REGION}
 s3.bucket=${S3_BUCKET}
 
-
+logging.level.org.springframework.security=DEBUG
