--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ cloud.aws.region.static=${AWS_REGION}
 s3.bucket=${S3_BUCKET}
 
 logging.level.org.springframework.security=DEBUG
+
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
