--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,6 @@ logging.level.org.springframework.security=DEBUG
 
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
+
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_KEY}
