--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,15 @@ jwt.private.key=classpath:app.key
 
 spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_KEY}
+
+#logging.level.root=DEBUG
+#logging.file.path=logs
+
+#management.endpoints.web.exposure.include=*
+#management.endpoints.web.base-path=/actuator
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
