trabalhando com microservices com rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,9 @@ management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
+spring.rabbitmq.addresses=${RABBITMQ.ADDRESSES}
+
+
+
+
+
