--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,6 +57,13 @@ management.metrics.export.prometheus.enabled=true
 
 spring.rabbitmq.addresses=${RABBITMQ.ADDRESSES}
 
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+
 
 
 
